--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,14 @@
 			</div>
 		</div>
 	</div>
+	<div>
+		<p></p>
+	</div>
+	<div class="container">
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
-<%= yield %>
 
+			<%= yield %>
+	</div>
 </body>
 </html>
